reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_one_basic_field_static_str-2.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super :: into_output_typescript_code :: < TestStructOneBasicFieldStaticStr >\n()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    output_test: (
      input: {},
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<
      reflectapi_demo.tests.basic.TestStructOneBasicFieldStaticStr,
      {}
    >;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace basic {
      export interface TestStructOneBasicFieldStaticStr {
        _f: string;
      }
    }
  }
}

namespace __implementation {

  function output_test(client: Client) {
    return (input: {}, headers: {}, options?: RequestOptions) =>
      __request<
        {},
        {},
        reflectapi_demo.tests.basic.TestStructOneBasicFieldStaticStr,
        {}
      >(client, "/output_test", input, headers, options);
  }
}
